--- a/package.json
+++ b/package.json
@@ -21,11 +21,21 @@
 		"eslint-config-prettier": "^6.3.0",
 		"prettier": "^1.18.2"
 	},
+	"bin": {
+		"versatile": "cli/index.js"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Vehmloewff/todo"
 	},
 	"dependencies": {
-		"debug": "^4.1.1"
+		"debug": "^4.1.1",
+		"deep-for-each": "^3.0.0",
+		"read-file-tree": "^1.1.1",
+		"rollup": "^1.23.1",
+		"rollup-plugin-commonjs": "^10.1.0",
+		"rollup-plugin-node-resolve": "^5.2.0",
+		"rollup-plugin-svelte": "^5.1.0",
+		"svelte": "^3.12.1"
 	}
 }
