--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"debug": "^4.1.1",
 		"deep-for-each": "^3.0.0",
 		"express": "^4.17.1",
+		"flat": "^4.1.0",
 		"hash-brown-router": "^3.4.1",
 		"read-file-tree": "^1.1.2",
 		"rollup": "^1.23.1",
