Get a build to work

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "todo",
 	"version": "1.0.0",
 	"description": "TODO: Add description",
-	"main": "index.js",
+	"main": "dist/desktop/index.js",
 	"scripts": {
 		"test": "jest --verbose",
 		"test:watch": "jest --watch --verbose",
@@ -32,10 +32,12 @@
 		"abstract-state-router": "^6.1.0",
 		"debug": "^4.1.1",
 		"deep-for-each": "^3.0.0",
+		"electron-builder": "^21.2.0",
 		"express": "^4.17.1",
 		"flat": "^4.1.0",
 		"hash-brown-router": "^3.4.1",
 		"read-file-tree": "^1.1.2",
+		"recursive-copy": "^2.0.10",
 		"rollup": "^1.23.1",
 		"rollup-plugin-commonjs": "^10.1.0",
 		"rollup-plugin-node-resolve": "^5.2.0",
