--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"abstract-state-router": "^6.1.0",
 		"debug": "^4.1.1",
 		"deep-for-each": "^3.0.0",
+		"electron": "^6.0.12",
 		"electron-builder": "^21.2.0",
 		"express": "^4.17.1",
 		"flat": "^4.1.0",
