Add ora to make things look better

--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
 	"dependencies": {
 		"abstract-state-router": "^6.1.0",
 		"acorn": "^7.1.0",
+		"chalk": "^2.4.2",
 		"debug": "^4.1.1",
 		"deep-for-each": "^3.0.0",
+		"delay": "^4.3.0",
 		"electron": "^6.0.12",
 		"electron-builder": "^21.2.0",
 		"express": "^4.17.1",
 		"flat": "^4.1.0",
 		"hash-brown-router": "^3.4.1",
+		"ora": "^4.0.2",
 		"read-file-tree": "^1.1.2",
 		"recursive-copy": "^2.0.10",
 		"rollup": "^1.23.1",
