--- a/package.json
+++ b/package.json
@@ -34,14 +34,11 @@
 		"chalk": "^2.4.2",
 		"debug": "^4.1.1",
 		"deep-for-each": "^3.0.0",
-		"delay": "^4.3.0",
 		"electron": "^6.0.12",
 		"electron-builder": "^21.2.0",
 		"express": "^4.17.1",
 		"flat": "^4.1.0",
 		"hash-brown-router": "^3.4.1",
-		"listr": "^0.14.3",
-		"ora": "^4.0.2",
 		"read-file-tree": "^1.1.2",
 		"recursive-copy": "^2.0.10",
 		"rollup": "^1.23.1",
@@ -52,7 +49,6 @@
 		"sausage-router": "^1.1.2",
 		"svelte": "^3.12.1",
 		"svelte-state-renderer": "^3.0.1",
-		"watch": "^1.0.2",
-		"ws": "^7.1.2"
+		"watch": "^1.0.2"
 	}
 }
