--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
 		"run-electron": "^1.0.0",
 		"sausage-router": "^1.1.2",
 		"svelte": "^3.12.1",
-		"svelte-state-renderer": "^3.0.1",
-		"watch": "^1.0.2"
+		"svelte-state-renderer": "^3.0.1"
 	}
 }
