--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"abstract-state-router": "^6.1.0",
 		"acorn": "^7.1.0",
 		"chalk": "^2.4.2",
+		"commander": "^3.0.2",
 		"debug": "^4.1.1",
 		"deep-for-each": "^3.0.0",
 		"electron": "^6.0.12",
