Update repo details

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://gitlab.com/jiknoapps/versatile"
+		"url": "https://github.com/Vehmloewff/versatilejs"
 	},
 	"files": [
 		"compiler",
