Remove publish from `postversion`

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"lint": "eslint . && npm run format",
 		"lint:test": "eslint . && npm run format:test",
 		"format:test": "prettier --check \"./**\"",
-		"postversion": "git push && git push --tags && rm -rf build/temp && npm publish"
+		"postversion": "git push && git push --tags && rm -rf build/temp"
 	},
 	"keywords": [],
 	"author": "",
