Start clean over

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,12 @@
-node_modules/
+node_modules
 .eslintignore
 .gitignore
 .prettierignore
 LICENSE
-build
-**/*.ico
-**/*.icns
+/dist
+/typings
+
 **/*.png
+**/*.ico
+**/*.map
+**/*.jpg
