--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,10 +16,11 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
-            - name: npm install, build, and test
+            - name: test
               run: |
-                  npm ci
+                  npm install
                   npm test
                   npm run lint:test
+                  npm run build
               env:
                   CI: true
