--- a/package.json
+++ b/package.json
@@ -29,19 +29,20 @@
 	],
 	"license": "MIT",
 	"devDependencies": {
+		"@types/minimatch": "^3.0.3",
 		"acorn": "^7.1.0",
 		"cross-env": "^6.0.3",
-		"prettier": "^1.18.2",
+		"prettier": "^1.19.1",
 		"rollup": "^1.27.0",
 		"rollup-plugin-command": "^1.0.7",
 		"rollup-plugin-commonjs": "^10.1.0",
-		"rollup-plugin-glob-files": "^1.0.0",
+		"rollup-plugin-glob-files": "^1.0.1",
 		"rollup-plugin-node-resolve": "^5.2.0",
 		"rollup-plugin-typescript": "^1.0.1",
 		"tslib": "^1.10.0",
 		"typescript": "^3.7.2",
-		"zip-tap": "^1.0.2",
-		"zip-tap-reporter": "^1.0.0"
+		"zip-tap": "^1.0.4",
+		"zip-tap-reporter": "^1.0.3"
 	},
 	"homepage": "https://github.com/Vehmloewff/todo",
 	"repository": {
