--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
 	"devDependencies": {
 		"cross-env": "^6.0.3",
 		"prettier": "^1.19.1",
-		"rollup": "^1.27.8",
 		"rollup-plugin-command": "^1.0.7",
 		"rollup-plugin-commonjs": "^10.1.0",
 		"rollup-plugin-glob-files": "^1.0.2",
@@ -54,5 +53,8 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Vehmloewff/todo"
+	},
+	"dependencies": {
+		"rollup": "^1.27.9"
 	}
 }
