--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "versatilejs",
-	"version": "0.0.0",
+	"version": "0.2.0-next.1",
 	"description": "Still in development... Check back soon!",
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
