--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
 	"browser": "dist/index.browser.js",
+	"versatile": "dist/index.ts",
 	"typings": "typings/runtime/index.d.ts",
 	"scripts": {
 		"build": "cross-env NODE_ENV=production rollup -c && tsc",
