--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"cross-env": "^6.0.3",
+		"delay": "^4.3.0",
 		"prettier": "^1.19.1",
 		"rollup-plugin-command": "^1.0.7",
 		"rollup-plugin-commonjs": "^10.1.0",
