--- a/package.json
+++ b/package.json
@@ -60,14 +60,12 @@
 		"tslib": "^1.10.0",
 		"typescript": "^3.7.3",
 		"zip-tap": "^1.0.4",
-		"zip-tap-reporter": "^1.0.4"
+		"zip-tap-reporter": "^1.0.4",
+		"rollup": "^1.27.9"
 	},
 	"homepage": "https://github.com/Vehmloewff/halyard",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Vehmloewff/halyard"
-	},
-	"dependencies": {
-		"rollup": "^1.27.9"
 	}
 }
