--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,11 +4,11 @@ on: [push]
 
 jobs:
     build:
-        runs-on: ubuntu-latest
+        runs-on: [ubuntu-latest, windows-latest, macOS-latest]
 
         strategy:
             matrix:
-                node-version: [8.x, 10.x, 12.x]
+                node-version: [8.x, 10.x, 12.x, 13.x]
 
         steps:
             - uses: actions/checkout@v1
