--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,26 @@
 name: CI
-
 on: [push]
-
 jobs:
-    build:
+    Tests:
         runs-on: ${{ matrix.os }}
-
         strategy:
             matrix:
-                node-version: [8.x, 10.x, 12.x, 13.x]
+                node-version: [8, 10, 12]
                 os: [ubuntu-latest, windows-latest, macOS-latest]
-
         steps:
+            - run: git config --global core.autocrlf false
             - uses: actions/checkout@v1
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v1
+            - uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
-            - name: test
-              run: |
-                  npm install
-                  npm test
-                  npm run lint:test
-                  npm run build
+            - run: npm install
+            - run: npm test
+            - run: npm run build
               env:
                   CI: true
+    Lint:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v1
+            - uses: actions/setup-node@v1
+            - run: 'npm i && npm run lint:test'
