--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
         strategy:
             matrix:
                 node-version: [8, 10, 12]
-                os: [ubuntu-latest, windows-latest, macOS-latest]
+                os: [ubuntu-latest, windows-latest]
         steps:
             - run: git config --global core.autocrlf false
             - uses: actions/checkout@v1
