Add folders files array

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
 	},
 	"files": [
 		"dist",
-		"typings"
+		"typings",
+		"compiler",
+		"platforms"
 	],
 	"license": "MIT",
 	"devDependencies": {
