Get rid of those todo lines in pkg.json

--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
 		"zip-tap": "^1.0.5",
 		"zip-tap-reporter": "^2.0.0"
 	},
-	"homepage": "https://github.com/Vehmloewff/todo",
+	"homepage": "https://github.com/Vehmloewff/driza",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Vehmloewff/todo"
+		"url": "https://github.com/Vehmloewff/driza"
 	},
 	"bugs": {
 		"url": "https://github.com/Vehmloewff/driza/issues/new"
