--- a/package.json
+++ b/package.json
@@ -36,35 +36,22 @@
 	],
 	"license": "MIT",
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "^11.0.0",
-		"@rollup/plugin-image": "^2.0.0",
-		"@rollup/plugin-json": "^4.0.1",
-		"@rollup/plugin-node-resolve": "^6.0.0",
 		"@types/cross-spawn": "^6.0.1",
 		"@types/debug": "^4.1.5",
 		"@types/write": "^2.0.0",
+		"@rollup/plugin-image": "2.0.1",
 		"acorn": "^7.1.0",
-		"commander": "^4.0.1",
 		"cordova": "^9.0.0",
 		"cross-env": "^6.0.3",
-		"cross-spawn": "^7.0.1",
 		"electron": "^7.1.7",
 		"electron-reloader": "^0.3.0",
 		"electron-util": "^0.13.1",
-		"find-up": "^4.1.0",
-		"make-dir": "^3.0.0",
-		"make-module": "^3.0.0",
 		"prettier": "^1.19.1",
-		"pupa": "^2.0.1",
-		"rollup": "^1.27.14",
-		"rollup-plugin-command": "^1.1.2",
 		"rollup-plugin-glob-files": "^1.0.3",
 		"rollup-plugin-string": "^3.0.0",
 		"rollup-plugin-terser": "^5.1.3",
 		"rollup-plugin-typescript": "^1.0.1",
-		"tslib": "^1.10.0",
 		"typescript": "^3.7.4",
-		"write": "^2.0.0",
 		"zip-tap": "^1.0.5",
 		"zip-tap-reporter": "^2.0.0"
 	},
@@ -76,7 +63,22 @@
 	"bugs": {
 		"url": "https://github.com/Vehmloewff/driza/issues/new"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"@rollup/plugin-commonjs": "^11.0.1",
+		"@rollup/plugin-json": "^4.0.1",
+		"@rollup/plugin-node-resolve": "^7.0.0",
+		"find-up": "^4.1.0",
+		"chalk": "^3.0.0",
+		"commander": "^4.1.0",
+		"cross-spawn": "^7.0.1",
+		"rollup-plugin-command": "^1.1.2",
+		"make-dir": "^3.0.0",
+		"make-module": "^3.0.0",
+		"pupa": "^2.0.1",
+		"rollup": "^1.29.0",
+		"tslib": "^1.10.0",
+		"write": "^2.0.0"
+	},
 	"bin": {
 		"driza": "bin/driza.js"
 	}
