--- a/package.json
+++ b/package.json
@@ -36,20 +36,15 @@
 	],
 	"license": "MIT",
 	"devDependencies": {
+		"@rollup/plugin-image": "2.0.1",
 		"@types/cross-spawn": "^6.0.1",
 		"@types/debug": "^4.1.5",
 		"@types/write": "^2.0.0",
-		"@rollup/plugin-image": "2.0.1",
 		"acorn": "^7.1.0",
-		"cordova": "^9.0.0",
 		"cross-env": "^6.0.3",
-		"electron": "^7.1.7",
-		"electron-reloader": "^0.3.0",
-		"electron-util": "^0.13.1",
 		"prettier": "^1.19.1",
 		"rollup-plugin-glob-files": "^1.0.3",
 		"rollup-plugin-string": "^3.0.0",
-		"rollup-plugin-terser": "^5.1.3",
 		"rollup-plugin-typescript": "^1.0.1",
 		"typescript": "^3.7.4",
 		"zip-tap": "^1.0.5",
@@ -77,7 +72,11 @@
 		"pupa": "^2.0.1",
 		"rollup": "^1.29.0",
 		"tslib": "^1.10.0",
-		"write": "^2.0.0"
+		"write": "^2.0.0",
+		"electron-reloader": "^0.3.0",
+		"electron": "^7.1.7",
+		"electron-util": "^0.13.1",
+		"cordova": "^9.0.0"
 	},
 	"bin": {
 		"driza": "bin/driza.js"
