--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@types/cross-spawn": "^6.0.1",
 		"@types/debug": "^4.1.5",
 		"@types/write": "^2.0.0",
+		"@zhangfuxing/copydir": "^1.1.3",
 		"acorn": "^7.1.0",
 		"cross-env": "^6.0.3",
 		"prettier": "^1.19.1",
