Add a ht reload feature

--- a/package.json
+++ b/package.json
@@ -64,21 +64,23 @@
 		"@rollup/plugin-commonjs": "^11.0.1",
 		"@rollup/plugin-json": "^4.0.1",
 		"@rollup/plugin-node-resolve": "^7.0.0",
-		"find-up": "^4.1.0",
+		"@types/ws": "^7.2.0",
 		"chalk": "^3.0.0",
 		"commander": "^4.1.0",
+		"cordova": "^9.0.0",
 		"cross-spawn": "^7.0.1",
-		"rollup-plugin-command": "^1.1.2",
+		"electron": "^7.1.7",
+		"electron-reloader": "^0.3.0",
+		"electron-util": "^0.13.1",
+		"find-up": "^4.1.0",
 		"make-dir": "^3.0.0",
 		"make-module": "^3.0.0",
 		"pupa": "^2.0.1",
 		"rollup": "^1.29.0",
+		"rollup-plugin-command": "^1.1.2",
 		"tslib": "^1.10.0",
 		"write": "^2.0.0",
-		"electron-reloader": "^0.3.0",
-		"electron": "^7.1.7",
-		"electron-util": "^0.13.1",
-		"cordova": "^9.0.0"
+		"ws": "^7.2.1"
 	},
 	"bin": {
 		"driza": "bin/driza.js"
